# CGRA-pathfinding

./: README.md
CGRA/cgra-me-release-2.0.2/src/: CMakeLists.txt
CGRA/cgra-me-release-2.0.2/src/archs/: AdresArch.cpp  ElasticRIKEN.cpp  HyCUBE.cpp
CGRA/cgra-me-release-2.0.2/src/core/: AnnealPlacer.cpp  CGRA.cpp  CMakeLists.txt  CompositeMappers.cpp  ConstraintSet.cpp  HeuristicMappers.cpp  ILPMapper.cpp  MRRG.cpp  MRRGProcedures.cpp  Mapper.cpp  Mapping.cpp  ModuleElastic.cpp  ModuleFPUnit.cpp  ModuleFuncUnit.cpp  ModuleProcedures.cpp  ModuleRoutingStructures.cpp  OpGraph.cpp  OpScheduler.cpp  Pathfinder.cpp  Scheduler.cpp  TMPack.cpp
CGRA/cgra-me-release-2.0.2/src/dotparser/: CMakeLists.txt  DotParserDriver.h  dot.y
CGRA/cgra-me-release-2.0.2/src/llvm-passes/: CMakeLists.txt  LoopParser.py
CGRA/cgra-me-release-2.0.2/src/modules/: AdresPE.cpp  CMakeLists.txt  RIKENPE_Elastic.cpp
CGRA/cgra-me-release-2.0.2/src/run/: CMakeLists.txt  cgrame.cpp  cmdline-test
CGRA/cgra-me-release-v2.0.1/: CHANGELOG.md  CMakeLists.txt  LICENSE  cgrame_env
CGRA/cgra-me-release-v2.0.1/benchmarks/: rules.mk
CGRA/cgra-me-release-v2.0.1/cmake/: FindGurobi.cmake  FindGurobi.cmake.bak
CGRA/cgra-me-release-v2.0.1/doc/source/: contributors_guide.rst  hybrid_system.rst  userguide.rst
CGRA/cgra-me-release-v2.0.1/inc/CGRA/: BitSetting.h  CGRA.h  ClusteredMapper.h  ConfigStore.h  ConstraintSet.h  Exception.h  HeuristicMappers.h  MRRG.h  MRRGProcedureCache.h  Mapper.h  Mapping.h  MappingProcedures.h  Module.h  ModuleComposites.h  ModuleElastic.h  OpGraph.h  OpScheduler.h  Scheduler.h  TupleHash.h  dotparse.h
CGRA/cgra-me-release-v2.0.1/inc/CGRA/impl/: GraphAlgorithms_Searching.inl
CGRA/cgra-me-release-v2.0.1/inc/CGRA/utility/: Collections.h  Functional.h
CGRA/cgra-me-release-v2.0.1/ip/bac_hybrid_system/: README
CGRA/cgra-me-release-v2.0.1/ip/bac_hybrid_system/cgra/arch/: hycube4.v
CGRA/cgra-me-release-v2.0.1/ip/bac_hybrid_system/cgra/bitstream/counter/: fir4.v  knn4.txt  knn8.v  mm8.txt  mm8.v
CGRA/cgra-me-release-v2.0.1/ip/bac_hybrid_system/cgra/bitstream/data/: fir8.txt  fir8.v
CGRA/cgra-me-release-v2.0.1/ip/bac_hybrid_system/hybrid_conn/: Makefile  cgrame.v  compile.sh  control.sv  hybrid.h  riscv_compile.sh  runlab.do  testbench.v  transcript  wave.do
CGRA/cgra-me-release-v2.0.1/ip/bac_hybrid_system/hybrid_conn/firmware/: firmware.elf  firmware.hex  riscv_test.h  start.S  test_macros.h
CGRA/cgra-me-release-v2.0.1/ip/bac_hybrid_system/hybrid_conn/firmware/astar/: neighbor_expand.S  simple_astar.S  test_graph_data.h
CGRA/cgra-me-release-v2.0.1/ip/bac_hybrid_system/hybrid_conn/firmware/counter/: fir4.S  mm4.S  mm8.S
CGRA/cgra-me-release-v2.0.1/ip/bac_hybrid_system/hybrid_conn/firmware/data/: fir4.S
CGRA/cgra-me-release-v2.0.1/ip/bac_hybrid_system/hybrid_conn/firmware/software/: riscv_knn.hex
CGRA/cgra-me-release-v2.0.1/ip/bac_hybrid_system/hybrid_conn/work/: _info  _lib.qdb  _lib1_0.qdb  _lib1_0.qtl
CGRA/cgra-me-release-v2.0.1/ip/hybrid_system/cgra/bitstream/counter/: fir4.txt  fir8.txt  fir8.v  knn4.v  mm4.v  taylor4.txt  taylor8.txt
CGRA/cgra-me-release-v2.0.1/ip/hybrid_system/cgra/bitstream/data/: fir4.txt  fir4.v
CGRA/cgra-me-release-v2.0.1/ip/hybrid_system/hybrid_conn/: Makefile  dp_ram.sv  riscv_compile.sh  tb_top.sv  testbench.v
CGRA/cgra-me-release-v2.0.1/ip/hybrid_system/hybrid_conn/astar/: Makefile  astar.c  astar_fixed_ports.txt  astar_kernel.c  cgrame.v  cgrame_process_readme.md  control.sv  graph_loop.dot.bak  instruc_ram.sv  mapper_config.ini  riscv_compile.sh  tb_top.sv  testbench.v  testbench.v.bak  transcript
CGRA/cgra-me-release-v2.0.1/ip/hybrid_system/hybrid_conn/astar/_riscv/: riscv_core.sv
CGRA/cgra-me-release-v2.0.1/ip/hybrid_system/hybrid_conn/astar/firmware/: astar_firmware.S  astar_firmware.S.bak  astar_firmware_ten_proc.S  firmware.elf  firmware.hex  hybrid.h  start.S
CGRA/cgra-me-release-v2.0.1/ip/hybrid_system/hybrid_conn/astar/work/: _info  _lib.qdb  _lib1_11.qdb  _lib1_11.qpg  _lib1_11.qtl  _opt__lock
CGRA/cgra-me-release-v2.0.1/ip/hybrid_system/hybrid_conn/astar/work/@_opt/: _lib.qdb  _lib1_1.qdb  _lib1_1.qpg  _lib1_1.qtl  _lib2_1.qdb  _lib2_1.qpg  _lib2_1.qtl  _lib3_1.qdb  _lib3_1.qpg  _lib3_1.qtl  _lib4_1.qdb  _lib4_1.qtl  _lib5_1.qdb  _lib5_1.qpg  _lib5_1.qtl  _lib6_1.qdb  _lib6_1.qpg  _lib6_1.qtl
CGRA/cgra-me-release-v2.0.1/ip/hybrid_system/hybrid_conn/astar/work/@_opt/_data/: exemptJC7fiB  exemptZf7oZB  exemptp4XAXN  exemptur0YqM
CGRA/cgra-me-release-v2.0.1/ip/hybrid_system/hybrid_conn/astar/work/@_opt/_viscom/: .env_list_file  .viscom_elab_file  _info  dulist
CGRA/cgra-me-release-v2.0.1/ip/hybrid_system/hybrid_conn/firmware/: firmware.elf  hybrid.h
CGRA/cgra-me-release-v2.0.1/ip/hybrid_system/hybrid_conn/firmware/counter/: knn4.S  knn8.S  taylor4.S
CGRA/cgra-me-release-v2.0.1/ip/hybrid_system/hybrid_conn/firmware/software/: riscv_fir.hex  riscv_mm.S  riscv_taylor.S
CGRA/cgra-me-release-v2.0.1/ip/hybrid_system/hybrid_conn/work/: _info  _lib.qdb  _lib1_0.qdb  _lib1_0.qtl
CGRA/cgra-me-release-v2.0.1/ip/hybrid_system/riscv/: riscv_pmp.sv
CGRA/cgra-me-release-v2.0.1/performance_models/freepdk45/min_delay/: area.ini  timing.ini
CGRA/cgra-me-release-v2.0.1/src/archs/: CMakeLists.txt  HyCUBE.cpp
CGRA/cgra-me-release-v2.0.1/src/core/: AnnealPlacer.cpp  BitSetting.cpp  BitStream.cpp  ClusteredMapper.cpp  Control.cpp  MappingProcedures.cpp  Module.cpp  ModuleComposites.cpp  ModuleFracUnit.cpp  ModulePredicationUnit.cpp  ModuleRoutingStructures.cpp  OpGraph.cpp  OpGraphProcedures.cpp  Pathfinder.cpp  Scheduler.cpp  TMPack.cpp
CGRA/cgra-me-release-v2.0.1/src/devscripts/: cgrame-make
CGRA/cgra-me-release-v2.0.1/src/dotparser/: dot.l  dotparser_tests.cpp
CGRA/cgra-me-release-v2.0.1/src/llvm-passes/: DFGGeneration.cpp
CGRA/cgra-me-release-v2.0.1/src/modules/: HyCUBEPE.cpp  RIKENPE_Elastic.cpp
CGRA/cgra-me-release-v2.0.1/src/run/: cgrame.cpp  cgrame_tests.cpp
baseline-astar/: a.out  astar.cpp  astar.h  fuckthis  graph_loader.h  parallel_astar  parallel_astar_adjacency_mat.cpp  parallel_astar_main_old.cpp  (+1 more)
(+61 files in other folders)
